<resources>
    <string name="app_name">onHere</string>
    <string name="forgot_pass">Esqueceu a senha?</string>
    <string name="sign_in_up">Não possui conta ainda? Cadastre-se!</string>
    <string name="remember_me">Lembrar-me</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="repeat_password">Repita a Senha</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="send_reset_password_email">Insira e-mail para redefinir sua senha.</string>
    <string name="send_reset_password_email_title">Redefina sua senha.</string>
    <string name="check_in">Check In</string>
    <string name="register">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="form_register">Formulário de Cadastro:</string>
    <string name="register_success">Usuário cadastrado com sucesso! Você já pode fazer login.</string>
    <string name="register_success_title">Cadastro efetuado</string>
    <string name="ok">OK</string>
    <string name="event_name">Nome do evento</string>
    <string name="delay_tolerance">Atraso permitido (minutos)</string>
    <string name="description">Descrição</string>
    <string name="date">Data de início</string>
    <string name="hour">Hora de início</string>
    <string name="dateEnd">Data final</string>
    <string name="hourEnd">Hora final</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="insert_valid_email">Insira um e-mail válido</string>
    <string name="information">Informações</string>
    <string name="check_in_sucess">Sucesso!</string>
    <string name="check_in_sucess_message">Verifique seu perfil para mais detalhes.</string>
    <string name="events">Eventos</string>
    <string name="password_not_match">As senhas diferem.</string>
    <string name="event_register_success">Visite seu perfil para mais detalhes.</string>
    <string name="event_register_success_title">Evento registrado!</string>
    <string name="go_to_profile">Ver perfil</string>
    <string name="event_code">Código do evento</string>
    <string name="time_start">Horário de início</string>
    <string name="share_code">Compartilhar</string>
    <string name="code">Código</string>
    <string name="register_email_already_exist">Esse e-mail já foi cadastrado.</string>
    <string name="register_email_already_exist_title">Falha:</string>
    <string name="back">Voltar</string>
    <string name="http_error">Erro HTTP. Por favor, tente novamente.</string>
    <string name="loading">Carregando…</string>
    <string name="difference_hour">A hora final deve ser posterior à hora de início.</string>
    <string name="difference_date">A data final deve ser posterior ou igual à data de início.</string>
    <string name="network_not_conected">Não foi encontrada conexão com a internet.</string>
    <string name="address">Endereço</string>
    <string name="required_address">Por favor, selecione um endereço.</string>
    <string name="invalid_password_or_email">E-mail ou senha inválida.</string>
    <string name="required_location_permission">Por favor, permita o uso da localização.</string>
    <string name="request_error">"Erro na requisição ao servidor."</string>string>
    <string name="welcome">Bem Vindo!</string>
    <string name="invalid_code_length">Códigos de evento contém 6 caracteres.</string>
    <string name="event_not_found">Evento não encontrado.</string>
    <string name="event_not_found_message">Verifique o código e tente novamente.</string>
    <string name="view">Visualizar</string>
    <string name="server_error">Encontramos algum erro em nossos servidores. Por favor, tente novamente mais tarde.</string>
    <string name="version">Versão 1.0.0</string>
    <string name="repository"><a href="https://github.com/esron/onhere">onHere</a></string>
    <string name="invalid_date">Data com formato inválido.</string>
    <string name ="id_error">Erro na identificação do usuário.</string>
    <string name="token_error">Por favor, faça login novamente.</string>
    <string name="check_in_error">Falha ao registrar-se no evento.</string>
    <string name="event_max_distance_error">Erro! Localização inválida.</string>
    <string name="event_max_distance">Sua localização difere do local do evento.</string>
    <string name="event_time_tolerance_error">Erro! Tolerância excedida.</string>
    <string name="event_time_tolerance">Não foi possível registrar-se no evento, limite de atraso excedido.</string>
    <string name="checkin_localization_error">Erro! Falha na localização</string>
    <string name="checkin_localization">Não foi possivel determinar sua localização. Verifique se o GPS esta ativo e tente novamente!</string>>
    <string name="confirmation_delete_event">Gostaria realmente de deletar este evento?</string>
    <string name="delete">Deletar</string>
    <string name="delay_limit_over">A quantidade de minutos do atraso permitido é superior à duração do evento.</string>
    <string name="confirmation_exit_auccont">Você realmente quer sair?</string>
    <string name="exit">Sair</string>
    <string name="profile">Perfil</string>
    <string name="ends">Termina</string>
    <string name="starts">Começa em:</string>
    <string name="participants">Participantes</string>
</resources>
