<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="galodamadrugada.onhere.LoginActivity">

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_above="@+id/textViewSignInUp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="@+id/editTextPass"
        app:layout_constraintRight_toRightOf="@+id/editTextPass"
        app:layout_constraintTop_toBottomOf="@+id/editTextPass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPass"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editTextEmail"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageViewLogo"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/imageViewLogo"
        app:layout_constraintHorizontal_bias="0.558"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_hi_res_512" />

    <TextView
        android:text="@string/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewForgotPass"
        android:layout_toEndOf="@+id/buttonLogin"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/buttonLogin"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonLogin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:text="@string/sign_in_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignInUp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textViewForgotPass"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textViewForgotPass"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPass"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintVertical_bias="0.802" />
</android.support.constraint.ConstraintLayout>
