<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="galodamadrugada.onhere.EventRegisterActivity">

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/event_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_alignTop="@+id/editTextEventName"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="13dp"
        android:layout_toStartOf="@+id/textViewHour"
        android:text="@string/date"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEventName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />

    <Button
        android:id="@+id/buttonHour"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_marginLeft="0dp"
        android:layout_toLeftOf="@+id/textViewHour"
        android:text="@string/hour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDate"
        app:layout_constraintTop_toBottomOf="@+id/buttonDate"
        app:layout_constraintVertical_bias="0.034"
        android:layout_marginTop="-1dp" />

    <EditText
        android:id="@+id/editTextDelay"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_toLeftOf="@+id/textViewHour"
        android:ems="10"
        android:hint="@string/delay_tolerance"
        android:inputType="number"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonHourEnd"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/buttonHourEnd" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="326dp"
        android:layout_height="53dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_toLeftOf="@+id/textViewHour"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="@+id/editTextDelay"
        app:layout_constraintTop_toBottomOf="@+id/editTextDelay" />

    <Button
        android:id="@+id/buttonRegisterEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintVertical_bias="0.063"
        android:layout_toLeftOf="@+id/textViewHour"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/editTextDescription"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editTextDescription" />

    <TextView
        android:id="@+id/textViewHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:layout_alignBaseline="@+id/buttonHour"
        android:layout_alignBottom="@+id/buttonHour"
        android:layout_alignEnd="@+id/editTextEventName"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        app:layout_constraintLeft_toRightOf="@+id/buttonHour"
        android:layout_marginLeft="69dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editTextEventName"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:layout_above="@+id/buttonDate"
        android:layout_alignStart="@+id/buttonDate"
        app:layout_constraintLeft_toRightOf="@+id/buttonDate"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/editTextEventName"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/buttonHourEnd"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/hourEnd"
        app:layout_constraintLeft_toLeftOf="@+id/buttonDateEnd"
        app:layout_constraintTop_toBottomOf="@+id/buttonDateEnd" />

    <Button
        android:id="@+id/buttonDateEnd"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/dateEnd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/buttonHour"
        app:layout_constraintRight_toRightOf="@+id/buttonHour"
        app:layout_constraintTop_toBottomOf="@+id/buttonHour" />

    <TextView
        android:id="@+id/textViewDateEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewHour"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editTextEventName"
        app:layout_constraintLeft_toRightOf="@+id/buttonDateEnd"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.917" />

    <TextView
        android:id="@+id/textViewHourEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDelay"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/editTextEventName"
        app:layout_constraintLeft_toRightOf="@+id/buttonHourEnd"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.917"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateEnd"
        app:layout_constraintVertical_bias="0.636" />


</android.support.constraint.ConstraintLayout>
