<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="galodamadrugada.onhere.AboutActivty">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_hi_res_512" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/app_name"
        android:textColor="@color/colorButtonLogin"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="@+id/imageViewLogo"
        app:layout_constraintRight_toRightOf="@+id/imageViewLogo"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewRepository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/repository"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/github_512"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewVersion"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.345" />

</android.support.constraint.ConstraintLayout>
